--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="flex justify-between items-center">
                 <h1 class="text-2xl font-bold text-gray-900 dark:text-white">
                     <span class="bg-clip-text text-transparent bg-gradient-to-r from-brand-indigo to-brand-purple">
-                        ستارك لابز
+                        Stark LaBs
                     </span>
                 </h1>
                 <button id="theme-toggle" 
